update validation amount
