# api/openapi.yml
@@ -50,9 +50,9 @@ components:
       properties:
         amount_idr:
           type: integer
-          minimum: 1
-          maximum: 999999999
-          description: Amount in Indonesian Rupiah
+          minimum: 10000
+          maximum: 50000000
+          description: Amount in Indonesian Rupiah (minimum 10,000 IDR, maximum 50,000,000 IDR)
           example: 50000
         description:
           type: string
